[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/game_level.gd" id="1"]
[ext_resource type="Script" path="res://scripts/grid.gd" id="2"]
[ext_resource type="Script" path="res://scripts/player.gd" id="3"]
[ext_resource type="Script" path="res://scripts/target.gd" id="4"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="5"]
[ext_resource type="Script" path="res://scripts/sfx_manager.gd" id="7"]

[sub_resource type="BoxMesh" id="BoxMesh_player"]
size = Vector3(0.6, 1.4, 0.6)

[node name="GameLevel" type="Node3D"]
script = ExtResource("1")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("5")

[node name="SfxManager" type="Node" parent="."]
script = ExtResource("7")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 20, 18)
projection = 1
size = 30.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.766044, 0.642788, 0, -0.642788, 0.766044, 0, 10, 5)
shadow_enabled = true

[node name="AmbientLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.5, 0.866025, 0, -0.866025, -0.5, 0, 5, -5)
light_color = Color(0.6, 0.6, 0.8, 1)
light_energy = 0.3

[node name="TitleLabel" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -12)

[node name="B" type="Label3D" parent="TitleLabel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.3, 0, 0)
pixel_size = 0.04
font_size = 150
text = "B"
modulate = Color(0.85, 0.85, 0.85, 1)
horizontal_alignment = 1
billboard = 1
no_depth_test = true

[node name="o" type="Label3D" parent="TitleLabel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.1, 0, 0)
pixel_size = 0.04
font_size = 150
text = "o"
modulate = Color(0.2, 0.8, 0.2, 1)
horizontal_alignment = 1
billboard = 1
no_depth_test = true

[node name="X1" type="Label3D" parent="TitleLabel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1, 0, 0)
pixel_size = 0.04
font_size = 150
text = "X"
modulate = Color(0.8, 0.2, 0.2, 1)
horizontal_alignment = 1
billboard = 1
no_depth_test = true

[node name="X2" type="Label3D" parent="TitleLabel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.3, 0, 0)
pixel_size = 0.04
font_size = 150
text = "X"
modulate = Color(0.2, 0.4, 0.9, 1)
horizontal_alignment = 1
billboard = 1
no_depth_test = true

[node name="Grid" type="Node3D" parent="."]
script = ExtResource("2")

[node name="Player" type="Node3D" parent="."]
script = ExtResource("3")

[node name="FireTimer" type="Timer" parent="Player"]
wait_time = 3.0

[node name="Model" type="Node3D" parent="Player"]

[node name="Body" type="MeshInstance3D" parent="Player/Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
mesh = SubResource("BoxMesh_player")

[node name="Target" type="Node3D" parent="."]
script = ExtResource("4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Target"]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="HPBar" type="ProgressBar" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 100.0
offset_top = 20.0
offset_right = -100.0
offset_bottom = 45.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="LevelLabel" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 50.0
offset_right = 60.0
offset_bottom = 75.0
text = "Level 1"
horizontal_alignment = 1

[node name="FireRateLabel" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -70.0
offset_right = 100.0
offset_bottom = -45.0
text = "0.33 tir/sec"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = -15.0
text = "1:00"
horizontal_alignment = 1

[node name="PressKeyLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -60.0
text = "Appuyez sur une touche"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 22

[node name="GameOverPanel" type="PanelContainer" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = 60.0

[node name="VBox" type="VBoxContainer" parent="UI/GameOverPanel"]
layout_mode = 2
alignment = 1

[node name="GameOverLabel" type="Label" parent="UI/GameOverPanel/VBox"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -14.0
